--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-lenex",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "type": "module",
   "types": "build/src/index.d.ts",
@@ -9,7 +9,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build && mocha build/test/**/*.js",
     "prepublish": "npm run build",
     "build": "tsc",
     "update-typings": "./scripts/update-typings.sh",
@@ -26,8 +26,9 @@
   },
   "devDependencies": {
     "@types/he": "^1.1.2",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.7",
-    "jest": "^27.4.3",
+    "mocha": "^9.1.3",
     "quicktype": "^15.0.260",
     "ts-json-schema-generator": "^0.97.0",
     "tslint": "^6.1.3",
